--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="app.js"></script>
   </head>
  <!--  initialize angular with ng-app, the main controller with ng-controller -->
-  <body ng-app="flapperNews" ng-controller="MainCtrl">
+  <body ng-app="sawit" ng-controller="MainCtrl">
 	<!-- ng-repeat creates a template for every item in an array -->
    <div ng-repeat="post in posts | orderBy: '-upvotes'"> <!--added an orderby fiter to automatically sort every item in the posts object-->
 <!-- Directive uses 2-way data binding to dynamically update the dom from the posts object-->
