--- a/index.html
+++ b/index.html
@@ -1,21 +1,54 @@
 <html>
-  <head>
-    <title>My First Mean App!</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
-    <script src="app.js"></script>
-  </head>
- <!--  initialize angular with ng-app, the main controller with ng-controller -->
-  <body ng-app="sawit" ng-controller="MainCtrl">
-	<!-- ng-repeat creates a template for every item in an array -->
-   <div ng-repeat="post in posts | orderBy: '-upvotes'"> <!--added an orderby fiter to automatically sort every item in the posts object-->
-   <span ng-click="incrementUpvotes(post)">^</span><!--added an up arrow that when clicked adds an upvote-->
-<!-- Directive uses 2-way data binding to dynamically update the dom from the posts object-->
-		{{post.title}} - upvotes: {{post.upvotes}} 
-	</div>
-	<form ng-submit="addPost()"> <!--this form encompasses title text-box and submit button -->
-<!-- ng-model binds the content of the text box to $scope.title which allows controller to access the content-->
-	  <input type="text" ng-model="title"></input>
-	  <button type="submit">Post</button>
-	</form>
-  </body>
+<head>
+  <title>Sawit</title>
+  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+  <script src="app.js"></script>
+  <style> .glyphicon-thumbs-up { cursor:pointer } </style>
+</head>
+<body ng-app="sawit" ng-controller="MainCtrl">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+
+      <div class="page-header">
+        <h1>SawIt</h1>
+      </div>
+
+      <div ng-repeat="post in posts | orderBy:'-upvotes'">
+        <span class="glyphicon glyphicon-thumbs-up"
+          ng-click="incrementUpvotes(post)"></span>
+        {{post.upvotes}}
+        <span style="font-size:20px; margin-left:10px;">
+          <a ng-show="post.link" href="{{post.link}}">
+            {{post.title}}
+          </a>
+          <span ng-hide="post.link">
+            {{post.title}}
+          </span>
+        </span>
+      </div>
+
+      <form ng-submit="addPost()"
+        style="margin-top:30px;">
+        <h3>Add a new post</h3>
+
+        <div class="form-group">
+          <input type="text"
+            class="form-control"
+            placeholder="Title"
+            ng-model="title"></input>
+        </div>
+        <div class="form-group">
+          <input type="text"
+          class="form-control"
+          placeholder="Link"
+          ng-model="link"></input>
+        </div>
+        <button type="submit" class="btn btn-primary">Post</button>
+      </form>
+
+    </div>
+  </div>
+</body>
 </html>
